--- a/grooveland-dev/frontend/public/styles/index.css
+++ b/grooveland-dev/frontend/public/styles/index.css
@@ -10,6 +10,8 @@
 
   font-family: 'Inter', sans-serif;
 
+  touch-action: none;
+
   cursor: default;
   user-select: none;
     -webkit-user-select: none;
